# HorseSafe

./: .gitignore  ACTIONS.md  API.md  ARCHITECTURE.md  BUGS.md  CHANGELOG.md  CLAUDE.md  COMPONENT_DIAGRAM.md  DATA_MODEL.md  DEPENDENCIES.md  DEPLOYMENT.md  DESIGN_TOKENS.md  DPIA.md  ENGINE_INPUT_CONTROL.md  GDPR_COMPLIANCE.md  LAUNCH_PREP.md  MONITORING.md  PRINCIPLES.md  PRIVACY_STATEMENT.md  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SEQUENCE_DIAGRAMS.md  THREAT_MODEL.md  UI_DESIGN.md  version.json
backend/: .env.example  README.md  app.py  config.py  pyproject.toml  requirements.txt
backend/db/: connection.py  init.py  migrate.py  promote_admin.py  schema.sql
backend/db/migrations/: 002_backup_codes.sql  003_audit_log_no_check.sql  004_sharing.sql
backend/middlewares/: csp_headers.py  ratelimit.py
backend/models/: admin.py  audit.py  auth.py  share.py  user.py  vault.py
backend/routes/: admin.py  auth.py  health.py  shares.py  vault.py
backend/services/: admin_service.py  audit_service.py  auth_service.py  backup_codes_service.py  jwt_service.py  magic_link_service.py  mfa_service.py  pw_service.py  share_service.py  storage_service.py
backend/tests/: conftest.py  test_admin.py  test_audit_csv.py  test_auth.py  test_auth_me.py  test_backup_codes.py  test_health.py  test_import_export_audit.py  test_mfa_magic_link.py  test_mfa_totp.py  test_password_change.py  test_sharing.py  test_vault.py
docs/: DEPLOY_HC55_LIVE.md  README.md
extension/: README.md
frontend/: README.md  admin.html  backup-codes.html  devserver.py  export.html  import.html  (+9 more)
(+52 files in other folders)
